--- a/src/app/person-detail/person-detail.component.html
+++ b/src/app/person-detail/person-detail.component.html
@@ -2,42 +2,47 @@
         <h1>Update {{person.Fullname}}</h1>
         <h2>User Details</h2>
         <hr>
-        <form [formGroup]="personForm" (ngSubmit)="save()" novalidate>
+        <form [formGroup]="personForm" (ngSubmit)="onSubmit(personForm.value)" novalidate>
 
                 <div class="form-group">
                         <label >Authorised
                         <!-- checkbox input -->
-                           <input type="checkbox" formControlName="Authorised" [checked]="person.IsAuthorised">
+                           <input type="checkbox" class="form-control"  formControlName="IsAuthorised" [checked]="person.IsAuthorised">
                         </label>
                 </div>
                 <div class="form-group">
                         <label for="Enabled"> Enabled
-                                <input type="checkbox" formControlName="Enabled" [checked]="person.IsEnabled">
+                                <input type="checkbox" class="form-control" formControlName="IsEnabled" [checked]="person.IsEnabled">
                         </label>
                 </div>
   
                         <h2>Favourite Colours</h2>
                         <hr>
+                        <div class="form-group">
                         <label for="Green">Blue</label>
                         <!-- checkbox input -->
-                        <input type="checkbox" [checked]='person.ColourNames.includes("Blue")'>
-                                
-                                
+                        <input type="checkbox" class="form-control" [checked]='person.ColourNames.includes("Blue")'>
+                </div>     
+                <div class="form-group">        
                         <label for="Green">Green</label>
                         <!-- checkbox input -->
-                        <input type="checkbox" [checked]='person.ColourNames.includes("Green")'>
+                        <input type="checkbox" class="form-control" [checked]='person.ColourNames.includes("Green")'>
+                        </div>
+                        <div class="form-group">
                         <label for="Red">Red</label>
                         <!-- checkbox input -->
-                        <input type="checkbox" [checked]='person.ColourNames.includes("Red")'>
-                                
-                        <button type="submit" id="save" (click)="save()">Save Changes</button> 
+                        <input type="checkbox" class="form-control" [checked]='person.ColourNames.includes("Red")'>
+                        </div>
+                        <div class="form-group">       
+                        <button type="submit" class="btn btn-primary">Save Changes</button> 
                         <button (click)="cancel()">Cancel</button>
+                        </div>
         </form>
         
                                 
         
 
-        <p>Form value: {{ heroForm.value | json }}</p>
+        
 </div>
 
 
