--- a/src/app/person-detail/person-detail.component.html
+++ b/src/app/person-detail/person-detail.component.html
@@ -1,6 +1,4 @@
-<mat-spinner [style.display]="showSpinner? 'block': 'none'" id="spinner">
-
-</mat-spinner>
+<mat-spinner [style.display]="showSpinner? 'block': 'none'" id="spinner"></mat-spinner>
 
 <mat-card *ngIf="person">
         <mat-card-content>
