--- a/src/app/people-list/people-list.component.html
+++ b/src/app/people-list/people-list.component.html
@@ -1,19 +1,36 @@
 <h2>People</h2>
 <table class="table table-striped table-hover table-condensed">
   <tbody>
-  <tr>
-    <th>Name</th>
-    <th>Authorised</th>
-    <th>Enabled</th>
-    <th>Colours</th>
-  </tr>
-  <tr *ngFor="let name of users">
-    <td> <a routerLink="/api/people/{{ name.PersonId }}">{{ name.Fullname}} </a> </td>
-    <td [ngStyle]="{'color':name.IsAuthorised ? 'green' : 'red' }">{{ name.IsAuthorised ? "Yes":"No" }}</td>
-    <td [ngStyle]="{'color':name.IsEnabled ? 'green' : 'red' }">{{ name.IsEnabled ? "Yes":"No" }}</td>
-    <td>{{ name.ColourNames }}</td>
-  </tr>
-</tbody>
+    <tr>
+      <th>Name</th>
+      <th>Authorised</th>
+      <th>Enabled</th>
+      <th>Colours</th>
+      <th></th>
+    </tr>
+    <tr *ngFor="let name of users">
+      <td>
+        <a routerLink="/api/people/{{ name.PersonId }}">{{ name.Fullname}} </a>
+
+      </td>
+      <td [ngStyle]="{'color':name.IsAuthorised ? 'green' : 'red' }">{{ name.IsAuthorised ? "Yes":"No" }}</td>
+      <td [ngStyle]="{'color':name.IsEnabled ? 'green' : 'red' }">{{ name.IsEnabled ? "Yes":"No" }}</td>
+      <td>{{ name.ColourNames }}</td>
+      <td>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_horiz</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <a routerLink="/api/people/{{ name.PersonId }}">
+            <button mat-menu-item>
+              <mat-icon>mode_edit</mat-icon>
+              <span>Edit</span>
+            </button>
+          </a>
+        </mat-menu>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <app-people-search></app-people-search>
